--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,24 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>ระบบตรวจคุณภาพของน้ำ</title>
+  <style>
+    body::-webkit-scrollbar {
+      width: 12px;
+    }
+    body{
+      scroll-behavior: smooth;
+    }
+
+    body::-webkit-scrollbar-track {
+      background-color: rgb(33 35 50) ;
+     
+    }
+
+    body::-webkit-scrollbar-thumb {
+      background-color: rgb(42 45 62);
+      border-radius: 10px;
+    }
+  </style>
 </head>
 
 <body style="padding: 0; margin: 0;">
